--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,3 @@
 <h1>New User</h1>
-<%= form_for @user do |f| %>
-  <%= f.label :name %><br>
-  <%= f.text_field :name %><br>
-  <%= f.label "Height (in inches)" %><br>
-  <%= f.text_field :height %><br>
-  <%= f.label "How happy are you? (1-5 scale)" %><br>
-  <%= f.text_field :happiness %><br>
-  <%= f.label "How nauseous are you? (1-5 scale)" %><br>
-  <%= f.text_field :nausea %><br>
-  <%= f.label "How many tickets are in your pocket?" %><br>
-  <%= f.text_field :tickets %><br>
-  <%= f.label "Check box if you are a theme park owner" %>
-  <%= f.check_box :admin %><br>
-  <%= f.submit "Create User" %>
-<% end %>
-
+  <%= render "form" %>
 <a href="<%= root_path %>">Back</a>
